// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`jsHandler > "after:content-["对酒当歌，人生几何"]" 1`] = `"const a = 'afterccontent-_xu5bf9u9152u5f53u6b4cuff0cu4ebau751fu51e0u4f55x_'"`;

exports[`jsHandler > 'common' "after:content-['对酒当歌，人生几何']" 1`] = `"const a = "afterccontent-_qu5bf9u9152u5f53u6b4cuff0cu4ebau751fu51e0u4f55q_""`;

exports[`jsHandler > 'common' img url case 1`] = `
"data: {
      classNames: "bg-_url_qhttpscssylnavdcomsassetssimagessvusdivider-graydwebpq__"
    }"
`;

exports[`jsHandler > 'common' mpx jit classNames 1`] = `
"data: {
      classNames: "text-_h123456_ text-_50px_ bg-_hfff_"
    }"
`;

exports[`jsHandler > issues/276 case 0 1`] = `
{
  "code": "const x = "rounded-_20rpx_ beforecrounded-_20rpx_"",
}
`;

exports[`jsHandler > issues/276 case 1 1`] = `
{
  "code": "const x = "rounded-_20rpx_ beforecrounded-_20rpx_"",
}
`;

exports[`jsHandler > issues/276 case 2 1`] = `
{
  "code": "const x = "beforecrounded-_20rpx_ rounded-_20rpx_"",
}
`;

exports[`jsHandler > issues/276 case 3 1`] = `
{
  "code": "const x = "beforecrounded-_20rpx_ rounded-_20rpx_"",
}
`;

exports[`jsHandler > jsPreserveClass '*' and 'w-[100px]' keyword 1`] = `"const n = '* 1 * 2 w-[100px]'"`;

exports[`jsHandler > jsPreserveClass '*' keyword 1`] = `"const n = '* 1 * 2'"`;

exports[`jsHandler > jsStringEscape getCase 0 1`] = `
"const a = 'w-_100px_';

eval('const b = \\'w-_99px_\\';\\nconsole.log(b)');"
`;

exports[`jsHandler > taro-url-before case 1`] = `
"var findReg = /[!'()~]|%20|%00/g;
var plusReg = /\\+/g;
var replaceCharMap = {
  '!': '%21',
  "'": '%27',
  '(': '%28',
  ')': '%29',
  '~': '%7E',
  '%20': '+',
  '%00': '\\x00'
};
"
`;

exports[`jsHandler > unicode case 0 1`] = `
"var replaceCharMap = {
  "'": '%27',
  '%00': '\\x00'
};
"
`;

exports[`jsHandler > 中文字符 case 0 1`] = `
{
  "code": "const a ={ className: "afterccontent-_qu7684u6492u7684u6492q_", children: "事实上" }",
}
`;

exports[`jsHandler > 中文字符 case 1 1`] = `
{
  "code": "const a ={ className: "afterccontent-_qu7684u6492u7684u6492q_", children: "事实上" }",
}
`;

exports[`jsHandler > 中文字符 case 2 1`] = `
{
  "code": ""use strict";(wx["webpackJsonp"]=wx["webpackJsonp"]||[]).push([[280],{3747:function(n,e,o){var t=o(6073),c=o(118),r=o(5349),u=function(){return(0,r.jsx)(c.Ss,{className:"beforeccontent-_qmoduleA_u666eu901au5206u5305q_",children:"moduleA 普通分包"})},s={};Page((0,t.createPageConfig)(u,"moduleA/pages/index",{root:{cn:[]}},s||{}))}},function(n){var e=function(e){return n(n.s=e)};n.O(0,[907,96],(function(){return e(3747)}));n.O()}]);",
}
`;

exports[`jsHandler > 中文字符 case 3 1`] = `
{
  "code": ""use strict";(wx["webpackJsonp"]=wx["webpackJsonp"]||[]).push([[280],{3747:function(n,e,o){var t=o(6073),c=o(118),r=o(5349),u=function(){return(0,r.jsx)(c.Ss,{className:"beforeccontent-_qmoduleA_u666eu901au5206u5305q_",children:"moduleA 普通分包"})},s={};Page((0,t.createPageConfig)(u,"moduleA/pages/index",{root:{cn:[]}},s||{}))}},function(n){var e=function(e){return n(n.s=e)};n.O(0,[907,96],(function(){return e(3747)}));n.O()}]);",
}
`;
